# daemonless-queuing

./: Pipfile  README.md  pyproject.toml  pyrightconfig.json  queue_test.sh  test.py
.github/workflows/: ci.yaml
src/daemonless_queuing/: __init__.py  function.py  lock.py  queuing.py  types.py
tests/: __fixtures__.py  fixtures.py  jobs.py  lock.py
