[project]
name = 'daemonless_queuing'
version = '0.0.3'
authors = [
  { name = 'João Gabriel Santos', email = 'joaosan177@gmail.com' }
]
description = 'todo'
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent'
]

[project.urls]
'Homepage' = 'https://github.com/capsulbrasil/daemonless-queuing'

[tool.setuptools]
packages = [
  'daemonless_queuing'
]

package-dir = { '' = 'src' }
